fixing spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     height: fit-content;
-    width: fit-content;
+    width: auto;
 }
 
 /* Title Styles */
@@ -119,14 +119,14 @@
 
 .lod-ui .character-portrait {
     /* Styles for the character portrait image */
-    margin-right: 10px;
+    margin: auto;
     flex-shrink: 0;
     /* Prevent portrait from shrinking too much */
     border: 2px solid #67391f;
     border-radius: 5px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    height: 80px;
-    width: 60px;
+    height: 120px;
+    width: 90px;
     max-width: 180px;
     max-height: 160px;
     object-fit: cover;
